4.3.0
=====
7 February 2025
- `gwen.parallel.maxThreads` can now be set to a percentage of total cores available
  - example: 80% for utilisation of 8 of 10 cores available for parallel processing
- Clean up attachment file number prefix (avoid doubling up)

4.2.4
=====
1 February 2025
- Use threadsafe masked value cache
- Update dependencies
  - Update scala from v3.6.2 to v3.6.3
  - Update gherkin from v30.0.4 to v31.0.0
  - Update logback from v1.5.15 to v1.5.16
  - Update commons-codec from v1.17.1 to v1.18.0
  - Update pdfbox from v3.0.3 to v3.0.4

4.2.3
=====
31 January 2025
- Synchronise masked value cache

4.2.2
=====
18 January 2025
- Set env.TZ setting to default timezone if not already set

4.2.1
=====
17 January 2025
- Fix github CI to use sbt

4.2.0
=====
12 January 2025
- Use unique id to name video file attachments
- Synchronise masked value cache

4.1.2
=====
27 December 2024
- Update dependencies
  - Update scala from v3.5.2 to v3.6.2
  - Update gherkin from v30.0.0 to v30.0.4
  - Update jline from v3.27.1 to v3.28.0
  - Update logback-core from v1.5.12 to v1.5.15
  - Update commons-text from v1.12.0 to v1.13.0
  - Update jackson-databind from v2.18.1 to v2.18.2

4.1.1
=====
23 December 2024
- Revert:
  - Do not honor `@Try` annotation in dry run mode when a reference is invalid

4.1.0
=====
19 December 2024
- Add support for masking input data fields
- Ensure masked fields are unmasked when evaluating javascript
- Added DSLs
  - `<step> <while|until> <name> is[ not] <blank|empty>`
  - `<step> <while|until> <name> is[ not] "<value>"`
  - `<step> <while|until> <name> <match> "<expression>"`
  - `<step> <while|until> <name> does not <match> "<expression>"`
- Do not honor `@Try` annotation in dry run mode when a reference is invalid

4.0.3
=====
10 December 2024
- Do not check step rules when resolving guard references in dry runs

4.0.2
=====
10 December 2024
- Resolve guard references in dry runs

4.0.1
=====
15 November 2024