@@ -1,9 +1,10 @@
 4.3.0
 =====
-7 February 2025
+8 February 2025
 - `gwen.parallel.maxThreads` can now be set to a percentage of total cores available
   - example: 80% for utilisation of 8 of 10 cores available for parallel processing
 - Clean up attachment file number prefix (avoid doubling up)
+- Refactored wait-until logic and step durations
 
 4.2.4
 =====
